reorganised sparse methods

--- a/best_acc_table.ipynb
+++ b/best_acc_table.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "      <th>std</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>CIFAR10</th>\n",
+       "      <th>FASHIONMNIST</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -98,82 +98,82 @@
        "    <tr>\n",
        "      <th>Edges random</th>\n",
        "      <td>3.0</td>\n",
-       "      <td>63.50</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>89.92</td>\n",
+       "      <td>0.33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Edges random No</th>\n",
        "      <td>3.0</td>\n",
-       "      <td>65.37</td>\n",
-       "      <td>0.50</td>\n",
+       "      <td>90.51</td>\n",
+       "      <td>0.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Egdes topk</th>\n",
        "      <td>3.0</td>\n",
-       "      <td>64.34</td>\n",
-       "      <td>0.51</td>\n",
+       "      <td>90.06</td>\n",
+       "      <td>0.21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Egdes topk No</th>\n",
        "      <td>3.0</td>\n",
-       "      <td>63.91</td>\n",
-       "      <td>0.30</td>\n",
+       "      <td>90.03</td>\n",
+       "      <td>0.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Entropy (0.01) No</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>64.57</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>Entropy (0.01)</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>90.15</td>\n",
+       "      <td>0.34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Entropy (0.1) No</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>64.30</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>Entropy (0.1)</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>87.55</td>\n",
+       "      <td>0.22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Nodes topk</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>64.96</td>\n",
+       "      <td>89.81</td>\n",
        "      <td>0.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Nodes topk No</th>\n",
        "      <td>2.0</td>\n",
-       "      <td>65.49</td>\n",
-       "      <td>0.05</td>\n",
+       "      <td>90.13</td>\n",
+       "      <td>0.10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>None</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>63.94</td>\n",
-       "      <td>0.57</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>89.99</td>\n",
+       "      <td>0.21</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   count   mean   std\n",
-       "CIFAR10                              \n",
-       "Edges random         3.0  63.50  0.25\n",
-       "Edges random No      3.0  65.37  0.50\n",
-       "Egdes topk           3.0  64.34  0.51\n",
-       "Egdes topk No        3.0  63.91  0.30\n",
-       "Entropy (0.01) No    1.0  64.57   NaN\n",
-       "Entropy (0.1) No     1.0  64.30   NaN\n",
-       "Nodes topk           2.0  64.96  0.05\n",
-       "Nodes topk No        2.0  65.49  0.05\n",
-       "None                 2.0  63.94  0.57"
+       "                 count   mean   std\n",
+       "FASHIONMNIST                       \n",
+       "Edges random       3.0  89.92  0.33\n",
+       "Edges random No    3.0  90.51  0.22\n",
+       "Egdes topk         3.0  90.06  0.21\n",
+       "Egdes topk No      3.0  90.03  0.25\n",
+       "Entropy (0.01)     4.0  90.15  0.34\n",
+       "Entropy (0.1)      4.0  87.55  0.22\n",
+       "Nodes topk         2.0  89.81  0.05\n",
+       "Nodes topk No      2.0  90.13  0.10\n",
+       "None               3.0  89.99  0.21"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset = \"cifar10\"\n",
+    "dataset = \"fashionmnist\"\n",
     "\n",
     "df[\"dataset\"] = df[\"ModelName\"].apply(lambda name:get_dataset(name))\n",
     "df[\"sparse_method\"] = df[\"ModelName\"].apply(lambda name:sparse_method(name))\n",
@@ -184,6 +184,13 @@
     "df_sub = df_sub.round(2)\n",
     "df_sub"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
