--- a/best_acc_table.ipynb
+++ b/best_acc_table.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"./experiments/diff_sparse2/best_acc.csv\", sep=\";\")\n",
-    "df[\"Score\"] = df[\"Score\"] * 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,21 +21,48 @@
     "    for d in [\"fashionmnist\", \"cifar10\", \"mnist\"]:\n",
     "        if d in model_name:\n",
     "            return d\n",
-    "\n",
-    "def sparse_method(model_name):\n",
-    "    \"\"\" Get sparse method from model name\"\"\"\n",
-    "    \n",
-    "    if \"loss\" in model_name: \n",
-    "        if \"loss_001\" in model_name:\n",
-    "            sparse_name = \"Entropy (0.01)\"\n",
-    "        elif \"loss_01\" in model_name:\n",
-    "            sparse_name = \"Entropy (0.1)\"\n",
     "        \n",
-    "    else: \n",
-    "        # get sparse string from model_name\n",
-    "        sparse_str = model_name.split(\":\")[1]\n",
+    "def get_table(best_acc_path, dataset, modelname2method, not_contain_substring=None):\n",
+    "    \"\"\" Function to get a table with statistics. \n",
+    "    \n",
+    "    Args: \n",
+    "        best_acc_path (str): Path to the best_acc.csv file. \n",
+    "        dataset (str): Name of the dataset to select as used in the model name. \n",
+    "        modelname2method (str->str): Function that processes the model name to the method is question. \n",
+    "        not_contain_substring (str, optional): Substring of the method that should not be in the table. \n",
+    "            Used to exclude methods.     \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Read the data frame\n",
+    "    df = pd.read_csv(best_acc_path, sep=\";\")\n",
+    "    df[\"Score\"] = df[\"Score\"] * 100\n",
+    "    \n",
+    "    # retrieve from model name the dataset and add as column\n",
+    "    df[\"dataset\"] = df[\"ModelName\"].apply(lambda name:get_dataset(name))\n",
     "\n",
-    "        # init sparse methods by sparse string\n",
+    "    # retrieve from model name the sparse method and add as column\n",
+    "    df[\"method\"] = df[\"ModelName\"].apply(lambda x:modelname2method(x))\n",
+    "\n",
+    "    # select on the dataset column\n",
+    "    df_sub = df[df['dataset'] == dataset]\n",
+    "\n",
+    "    # remove all sparse methods that contain this substring\n",
+    "    if not_contain_substring:\n",
+    "        df_sub = df_sub[~df_sub['method'].str.contains(not_contain_substring)]\n",
+    "    \n",
+    "    # hacky solution to get nice title, rename the method column to the dataset name\n",
+    "    new_method_col = dataset.upper() \n",
+    "    df_sub = df_sub.rename(index=str, columns={\"method\": new_method_col})\n",
+    "    \n",
+    "    # get statistics \n",
+    "    df_sub = df_sub.groupby([new_method_col])[\"Score\"].describe()[[\"count\", \"mean\", \"std\"]]\n",
+    "    \n",
+    "    # round to 2 digits \n",
+    "    df_sub = df_sub.round(2)\n",
+    "    \n",
+    "    return df_sub\n",
+    "\n",
+    "def sparse_parser(sparse_str, model_name):\n",
     "        sparse = SparseMethods(sparse_str)\n",
     "        \n",
     "        method_list = []\n",
@@ -57,49 +74,60 @@
     "                method_list.append(f\"{step['target']} {step['method']} {percent_list}\")\n",
     "        \n",
     "        sparse_name = \" & \".join(method_list)\n",
-    "    \n",
-    "    if \"no\" in model_name[-2:]: \n",
-    "        sparse_name += \" No\"\n",
     "        \n",
-    "    return sparse_name\n",
+    "        if \"no\" in model_name[-2:]: \n",
+    "            sparse_name += \" No\"\n",
+    "        \n",
+    "        return sparse_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Diff sparse experiment\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define function to get sparse method from model name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_sparse_method(model_name):\n",
+    "    \"\"\" Get sparse method from model name. \n",
+    "    \n",
+    "    Model names have to be formatted as: {dataset}_:{sparse_method}:\n",
+    "\n",
+    "    Example: cifar10_:edges_random_0.3-0.3:\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if \"loss\" in model_name: \n",
+    "        if \"loss_001\" in model_name:\n",
+    "            sparse_name = \"Entropy (0.01)\"\n",
+    "        elif \"loss_01\" in model_name:\n",
+    "            sparse_name = \"Entropy (0.1)\"\n",
+    "        \n",
+    "    else: \n",
+    "        # get sparse string from model_name\n",
+    "        sparse_str = model_name.split(\":\")[1]\n",
+    "\n",
+    "        sparse_name = sparse_parser(sparse_str, model_name)\n",
     "            \n",
+    "    return sparse_name        \n",
     "    "
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Select df sub"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = \"cifar10\"\n",
-    "sparse_method_not_contains = \" No\"\n",
-    "\n",
-    "df[\"dataset\"] = df[\"ModelName\"].apply(lambda name:get_dataset(name))\n",
-    "df[\"sparse_method\"] = df[\"ModelName\"].apply(lambda x:sparse_method(x))\n",
-    "\n",
-    "\n",
-    "df_sub = df[df['dataset'] == dataset]\n",
-    "df_sub = df_sub[~df_sub['sparse_method'].str.contains(sparse_method_not_contains)]\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Make nice column of df_sub"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -137,15 +165,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Entropy (0.01)</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>64.88</td>\n",
-       "      <td>0.56</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>65.56</td>\n",
+       "      <td>0.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Entropy (0.1)</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>61.99</td>\n",
-       "      <td>2.02</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>62.22</td>\n",
+       "      <td>3.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>edges random 0.0-0.3</th>\n",
@@ -244,8 +272,8 @@
       "text/plain": [
        "                                             count   mean   std\n",
        "CIFAR10                                                        \n",
-       "Entropy (0.01)                                 4.0  64.88  0.56\n",
-       "Entropy (0.1)                                  4.0  61.99  2.02\n",
+       "Entropy (0.01)                                 8.0  65.56  0.90\n",
+       "Entropy (0.1)                                  8.0  62.22  3.62\n",
        "edges random 0.0-0.3                           4.0  64.32  0.28\n",
        "edges random 0.0-0.6                           4.0  64.11  0.16\n",
        "edges random 0.3-0.3                           4.0  63.91  0.92\n",
@@ -263,17 +291,119 @@
        "none                                           4.0  64.64  0.33"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_sparse_method_col = dataset.upper() # hacky solution to get nice title\n",
-    "df_sub = df_sub.rename(index=str, columns={\"sparse_method\": new_sparse_method_col})\n",
-    "df_sub = df_sub.groupby([new_sparse_method_col])[\"Score\"].describe()[[\"count\", \"mean\", \"std\"]]\n",
-    "df_sub = df_sub.round(2)\n",
-    "df_sub"
+    "get_table(\"./experiments/diff_sparse2/best_acc.csv\", \"cifar10\", get_sparse_method, \" No\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Routing effect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_routing_iters_used(model_name):\n",
+    "    \"\"\" Get Number of routing iterations from model name. \n",
+    "    \n",
+    "    Model names have to be formatted as: {dataset}_:{routing_iters}:\n",
+    "\n",
+    "    Example: cifar10_:1:\n",
+    "    \"\"\"\n",
+    "    split = model_name.split(\":\")\n",
+    "    sparse_method = sparse_parser(split[1], model_name)\n",
+    "    routing_iters = split[2]\n",
+    "    arch = split[4]\n",
+    "    \n",
+    "    \n",
+    "    return f\"{sparse_method} {routing_iters} {arch}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FASHIONMNIST</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>none 1 single</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>91.13</td>\n",
+       "      <td>0.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>none 2 single</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>90.35</td>\n",
+       "      <td>0.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>none 3 single</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>90.06</td>\n",
+       "      <td>0.23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               count   mean   std\n",
+       "FASHIONMNIST                     \n",
+       "none 1 single    3.0  91.13  0.09\n",
+       "none 2 single    3.0  90.35  0.21\n",
+       "none 3 single    3.0  90.06  0.23"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_table(\"./experiments/effect_routing/best_acc.csv\", \"fashionmnist\", get_routing_iters_used, \"double\")"
    ]
   },
   {
