--- a/toy_gaussian_data.ipynb
+++ b/toy_gaussian_data.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,15 +19,8 @@
     "import numpy as np\n",
     "import pickle\n",
     "from train_toy import RoutingIter, RoutingPoint\n",
-    "from nets import _CapsNet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from nets import _CapsNet\n",
+    "\n",
     "def car2pol(x, y):\n",
     "    r = np.sqrt(x**2 + y**2)\n",
     "    theta = np.arctan2(y, x)\n",
@@ -122,8 +122,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Before training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +156,7 @@
     }
    ],
    "source": [
-    "with open(\"experiments/2dgaussian/routing_points\", \"rb\") as f:\n",
+    "with open(\"data/2dgaussian/routing_points\", \"rb\") as f:\n",
     "    routing_points = pickle.load(f)\n",
     "    \n",
     "routing_point = routing_points[30]     # routing point index\n",
@@ -158,8 +165,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### End of training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +199,7 @@
     }
    ],
    "source": [
-    "with open(\"experiments/2dgaussian/routing_points\", \"rb\") as f:\n",
+    "with open(\"data/2dgaussian/routing_points\", \"rb\") as f:\n",
     "    routing_points = pickle.load(f)\n",
     "    \n",
     "routing_point = routing_points[550]     # routing point index\n",
@@ -194,8 +208,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### End of training and zoomed"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -221,20 +242,13 @@
     }
    ],
    "source": [
-    "with open(\"experiments/2dgaussian/routing_points\", \"rb\") as f:\n",
+    "with open(\"data/2dgaussian/routing_points\", \"rb\") as f:\n",
     "    routing_points = pickle.load(f)\n",
     "    \n",
     "routing_point = routing_points[550]     # routing point index\n",
     "batch_index =  126                      # batch_index\n",
     "plot_routing_steps(batch_index, routing_point, norm_c_ji=True, show_v=False, plot_pred_mean=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
